--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-cloud-alibaba</artifactId>
+    <artifactId>my-spring-cloud-alibaba</artifactId>
     <groupId>com.zy.cloud.alibaba</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -62,10 +62,18 @@
                 <version>${spring-cloud-starter-alibaba-nacos.version}</version>
             </dependency>
             <!--spring cloud version end-->
-
-
-
-
         </dependencies>
     </dependencyManagement>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-starter-actuator.version}</version>
+                <configuration><fork>true</fork></configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
