--- a/gate-way/pom.xml
+++ b/gate-way/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-cloud-alibaba</artifactId>
+        <artifactId>my-spring-cloud-alibaba</artifactId>
         <groupId>com.zy.cloud.alibaba</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -45,11 +45,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-gateway-webflux -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-gateway-webflux</artifactId>
         </dependency>
 
         <!-- Spring Cloud与Dubbo整合依赖-->
