--- a/common/pom.xml
+++ b/common/pom.xml
@@ -80,6 +80,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.wilson-he</groupId>
+            <artifactId>swagger2-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
