--- a/dubbo-api/pom.xml
+++ b/dubbo-api/pom.xml
@@ -13,4 +13,10 @@
     <packaging>jar</packaging>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zy.cloud.alibaba</groupId>
+            <artifactId>utils</artifactId>
+        </dependency>
+    </dependencies>
 </project>
