--- a/common/pom.xml
+++ b/common/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>swagger2-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.zy.cloud.alibaba</groupId>
+            <artifactId>utils</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
