--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -13,6 +13,16 @@ spring:
       discovery:
         server-addr: www.mynacos.com:8848
         ip: www.mylocalhost.com
+      config:
+        enabled: false
+    stream:
+          rocketmq:
+            binder:
+              # RocketMQ 服务器地址
+              name-server: 192.168.106.92:9876
+          bindings:
+            # 这里是个 Map 类型参数，{} 为 YAML 中 Map 的行内写法
+            output: {destination: test-topic, content-type: application/json}
   redis:
     host: www.myredis.com
     port: 6379
