--- a/gate-way/pom.xml
+++ b/gate-way/pom.xml
@@ -53,6 +53,19 @@
             <artifactId>spring-cloud-starter-dubbo</artifactId>
         </dependency>
 
+        <!-- ThymeLeaf 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <!-- 引入okHttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.1</version>
+        </dependency>
+
     </dependencies>
 
 
