--- a/gate-way/src/main/resources/application.yml
+++ b/gate-way/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     #开发配置为false,避免修改模板还要重启服务器
     cache: false
     #配置模板路径，默认是templates，可以不用配置
-    prefix: classpath:/templates
+    prefix: classpath:/templates/
     suffix: .html
   application:
     name: gate-way-service
@@ -38,25 +38,26 @@ spring:
 #              - Path=/user-service-consumer/**
 #            filters:
 #              - StripPrefix=1
-dubbo:
-  cloud:
-    #订阅的服务 默认订阅所有服务
-    subscribed-services:
-  protocol:
-    port: 20881
-    name: dubbo
-  registry:
-      #将dubbo服务挂在到Springcloud，本案例中就是读取nacos中的服务
-      address: spring-cloud://localhost
-#      group: gate-way
-  application:
-    name: gate-way-service
-#    qos-enable: false
-  consumer:
-    #订阅的客户端不检查，dubbo在服务启动后，回去检查调用的Reference接口，检查失败，会导致启动不成功
-    check: false
+#dubbo:
+#  cloud:
+#    #订阅的服务 默认订阅所有服务
+#    subscribed-services:
+#  protocol:
+#    port: 20881
+#    name: dubbo
+#  registry:
+#      #将dubbo服务挂在到Springcloud，本案例中就是读取nacos中的服务
+#      address: spring-cloud://localhost
+##      group: gate-way
+#  application:
+#    name: gate-way-service
+##    qos-enable: false
+#  consumer:
+#    #订阅的客户端不检查，dubbo在服务启动后，回去检查调用的Reference接口，检查失败，会导致启动不成功
+#    check: false
 
 github:
   client_id: c9d8fccc9202c219481c
   client_secret: 16d80255d78b409a22470d47ab7fa6e7c1079d70
   redirect_url: http://localhost:8001/api/github/callback
+  login_url: https://github.com/login/oauth/authorize?client_id=c9d8fccc9202c219481c&state=test&redirect_uri=http://localhost:8001/api/github/callback
