--- a/gate-way/pom.xml
+++ b/gate-way/pom.xml
@@ -80,6 +80,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+
         <!-- 引入okHttp -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
