--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,6 @@
                 <version>${fastjson.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>io.github.wilson-he</groupId>
-                <artifactId>swagger2-spring-boot-starter</artifactId>
-                <version>${swagger2-spring-boot-starter.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
@@ -140,6 +135,22 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-stream-binder-rocketmq</artifactId>
                 <version>${spring-cloud-stream-binder-rocketmq.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>1.9.6</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
