--- a/author/src/main/resources/application.yml
+++ b/author/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     nacos:
       discovery:
         server-addr: www.mynacos.com:8848
-#        ip: www.mylocalhost.com
+        ip: www.mylocalhost.com
       config:
         enabled: false
 
