--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.1.4.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
     </dependencies>
 
 
