--- a/common/pom.xml
+++ b/common/pom.xml
@@ -86,13 +86,9 @@
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>swagger-bootstrap-ui</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.zy.cloud.alibaba</groupId>
